// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calculateClick action creator exports the correct format 1`] = `
Object {
  "type": "CALCULATE_CLICK",
}
`;

exports[`divisionClick action creator exports the correct format 1`] = `
Object {
  "type": "DIVISION_CLICK",
}
`;

exports[`multiplicationClick action creator exports the correct format 1`] = `
Object {
  "type": "MULTIPLICATION_CLICK",
}
`;

exports[`numberClick action creator exports the correct format 1`] = `
Object {
  "payload": Object {
    "input": "1",
  },
  "type": "NUMBER_CLICK",
}
`;

exports[`subtractionClick action creator exports the correct format 1`] = `
Object {
  "type": "SUBTRACTION_CLICK",
}
`;

exports[`sumClick action creator exports the correct format 1`] = `
Object {
  "type": "SUM_CLICK",
}
`;
